# mastermind

./: .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  docker-compose.yml
mastermind-go/: Dockerfile  Makefile  README.md  docker-compose.yml  go.mod
mastermind-go/cmd/mastermind/: main.go
mastermind-go/internal/analysis/: analysis.go  analysis_test.go
mastermind-go/internal/api/: errors.go  handlers.go  handlers_test.go  types.go
mastermind-go/internal/game/: game.go  game_test.go
mastermind-go/internal/state/: state.go  state_test.go
mastermind-go/static/: app.js  index.html
src/: analysis.rs  api.rs  game.rs  main.rs  state.rs
static/: app.js  style.css
